--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.851.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "multer": "^1.4.2"
   }
